samples/_failures_safe/1761516149_07d4b8_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_9c1016bf.c: In function ‘main’:
./samples/SAFE/__tmp_9c1016bf.c:154:5: error: expected declaration or statement at end of input
  154 |     }
      |     ^
